few labs and homeworks